--- a/index.html
+++ b/index.html
@@ -1,60 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <title>Log in</title>
-      <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
-         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-   </head>
-   <body>
-      	<section id="log-in">
-         <div class="container">
-            <div class="dropdown">
-               <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               		English
-               </button>
-               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  	<a class="dropdown-item" href="#">Turkish</a>
-                  	<a class="dropdown-item" href="#">Russian</a>
-               </div>
-            </div>
-            <div class="logo">
-               <img src="img/logo.svg" alt="logo">
-            </div>
-            <form action="#" method="POST">
-               <button type="button" class="instagram-button">
-               <i class="fab fa-facebook-square"></i> Continue with Facebook
-               </button>
-               <h4>OR</h4>
-               <div class="form-group">
-                  <input type="name" class="form-control" placeholder="Phone number,username, or email">
-               </div>
-               <div class="form-group">
-                  <input type="password" class="form-control" placeholder="Password">
-               </div>
-               <div class="links">
-                  <a href="#">Forgot password ?</a>
-               </div>
-               <button type="button" class="instagram-button">Log In</button>
-               <div class="signup-box">
-                  <h6>Don't have account? <a href="#">Sign up</a></h6>
-               </div>
-			   	<div class="footer">
-					<h6>from</h6>
-					<h5>FACEBOOK</h5>
-				</div>
-            </form>
-         </div>
-      	</section>
-	  	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
-	  	integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-   </body>
+  <head>
+    <title>Log in</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  </head>
+  <body>
+    <section id="log-in">
+      <div class="container">
+        <div class="dropdown">
+          <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> English </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Turkish</a>
+            <a class="dropdown-item" href="#">Russian</a>
+          </div>
+        </div>
+        <div class="logo">
+          <img src="img/logo.svg" alt="logo">
+        </div>
+        <form action="#" method="POST">
+          <button type="button" class="instagram-button">
+            <i class="fab fa-facebook-square"></i> Continue with Facebook </button>
+          <h4>OR</h4>
+          <div class="form-group">
+            <input type="name" class="form-control" placeholder="Phone number,username, or email">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="links">
+            <a href="#">Forgot password ?</a>
+          </div>
+          <button type="button" class="instagram-button">Log In</button>
+          <div class="signup-box">
+            <h6>Don't have account? <a href="#">Sign up</a>
+            </h6>
+          </div>
+          <div class="footer">
+            <h6>from</h6>
+            <h5>FACEBOOK</h5>
+          </div>
+        </form>
+      </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
